edits to CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
+2013-12-29  Noah Snavely  <snavely@cs.cornell.edu>
+
+        * Added support for Ceres solver
+        * Cleaning up the code a bit
+
+
 2010-04-03  Noah Snavely  <snavely@cs.cornell.edu>
+
         * Upgrade to v0.4
         * Removed reference implementations of LAPACK and BLAS due to
           bugs in 64-bit version
@@ -6,6 +13,7 @@
         * Updated RadialUndistort (note that you now must specify an 
         * output directory)
         * Added Bundle2Vis tool
+
 
 2009-05-04  Noah Snavely  <snavely@cs.cornell.edu>
 
